# Pet-AD-Projects

./: CMakeLists.txt  README.md  config.h.in
inc/: Game.hpp
mine_sweeper/: minesw-curs.py  minesw-driv.py  minesw.py
src/: Game.cpp  main.cpp  sfml-app
